--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-.swiper {
-    width: 200px;
-    height: 300px;
-  }
-
 .swiper-container {
-  width: 50%;
-  height: 400px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper-slide img {
+    max-width: 80%;
+    max-height: 80vh;
+    object-fit: contain;
 }
